--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ readme = "README.md"
 packages = [{ include = "be_task_ca" }]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 sqlalchemy = "^2.0.11"
 psycopg2 = "^2.9.6"
 fastapi = "^0.95.1"
 uvicorn = "^0.22.0"
+greenlet = "^3.1.1"
+typing-extensions = "^4.12.2"
 
 
 [tool.poetry.group.dev.dependencies]
