--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ fastapi = "^0.95.1"
 uvicorn = "^0.22.0"
 greenlet = "^3.1.1"
 typing-extensions = "^4.12.2"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -31,7 +32,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-start = "scripts:cli_start"
+start = "scripts:start"
 schema = "be_task_ca.commands:create_db_schema"
 graph = "scripts:create_dependency_graph"
 tests = "scripts:run_tests"
